# desafio_nava

./: .gitignore  README.md  pyproject.toml
desafio_nava/: __init__.py  definitions.py
desafio_nava/assets/bronze/: __init__.py  ing_pda_beneficiario.py  ing_pda_beneficiarios.py
desafio_nava/assets/gold/: __init__.py  dim_faixa_etaria.py  dim_municipio.py  dim_operadora.py  fato_beneficiario.py  orders_summary.py
desafio_nava/assets/silver/: __init__.py  cleaned_customers.py  cleaned_orders.py  stg_pda_beneficiario.py
desafio_nava/config/: partitions.py  paths.py
desafio_nava/io_managers/: __init__.py
desafio_nava/jobs/: __init__.py
desafio_nava/partitions/: __init__.py
desafio_nava/resources/: __init__.py  database.py  spark.py  spark_resource.py  storage.py
desafio_nava/schedules/: __init__.py
desafio_nava/sensors/: __init__.py
desafio_nava/utils/: spark_config.py
notebook/: create-delta-tables.ipynb  download_ans_202508.py
sql/: RESULT-5operadoras-maior-beneficiarios-ativos.html  RESULT-faixa-etaria-mais-beneficiarios.html  RESULT-liste-quantidade-beneficiarios-municipio.html  analises_beneficiarios.sql  duckdb_create_schema.sql
